logs/mobility/build.make.162.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doFreeMovementStuff()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:672:10: error: ‘errowYaw’ was not declared in this scope
 if (fabs(errowYaw) > rotateOnlyAngleTolerance)
          ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:693:10: error: ‘errowYaw’ was not declared in this scope
 if (fabs(errowYaw) > rotateOnlyAngleTolerance)
          ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
